<resources>
    <string name="app_name">CelVisitas</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_slideshow">Perfil</string>
    <string name="Inicio">Inicio</string>
    <string name="Perfil">Perfil</string>
    <string name="Logout">Cerrar session</string>
    <string name="nombre_de_usuario_pendiente">Nombre de usuario pendiente</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="title_activity_image_detail">imageDetail</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="usernameNav">nameUser</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="msg_token_fmt" />
</resources>