<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Constrainid"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:paddingStart="17dp"
    android:paddingEnd="15dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="375dp"
        android:layout_height="145dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="5dp"
        android:animateLayoutChanges="true"
        android:background="@drawable/white_frame"
        android:backgroundTint="#E6FFFFFF"
        app:cardCornerRadius="5dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="122dp"
            android:layout_height="109dp"
            android:layout_margin="10dp"
            tools:ignore="ImageContrastCheck"
            tools:src="@drawable/avatar" />

        <TextView
            android:id="@+id/nameRequestCard"
            android:layout_width="223dp"
            android:layout_height="42dp"
            android:layout_marginStart="130dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/nunito"
            android:text="@string/nombre_de_usuario_pendiente"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="16sp" />

        <Button
            android:id="@+id/buttonAcept"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginStart="135dp"
            android:layout_marginTop="70dp"
            android:background="@drawable/material_button_accept"
            android:fontFamily="@font/nunito"
            android:text="@string/aceptar"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginStart="245dp"
            android:layout_marginTop="70dp"
            android:background="@drawable/material_button_cancel"
            android:text="@string/cancelar"
            android:textColor="@color/white"
            tools:fontFamily="@font/nunito" />

        <Button
            android:id="@+id/buttonExit"
            android:layout_width="101dp"
            android:layout_height="42dp"
            android:layout_marginStart="190dp"
            android:layout_marginTop="70dp"
            android:background="@drawable/material_button_cancel"
            android:drawableLeft="@drawable/logout_white_30"
            android:paddingLeft="3dp"
            android:text="Salir"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/idVisit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="id"
            android:visibility="invisible" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>